Fix scrollbar issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 .thumbnail {
   background-color: #D3D3D3;
-  overflow: scroll;
+  overflow: auto;
   min-height: 0;
 }
 
